src/objects/Change_Request__c.object
<CustomObject>
    <description>Stores information on user change requests.</description>
    <fields>
        <fullName>Actual_Completion_Date__c</fullName>
        <description>This date may be different from the scheduled completion date if assigned party was not able to complete it by this date.</description>
        <inlineHelpText>The date this change request was actually completed.</inlineHelpText>
        <label>Actual Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Hours__c</fullName>
        <description>Actual number of Hours to complete the change request.</description>
        <inlineHelpText>Actual number of Hours to complete the change request.</inlineHelpText>
        <label>Actual Hours</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Priority_Level__c</fullName>
        <label>Actual Priority Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Urgent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Actual_Start_Date__c</fullName>
        <description>This field captures the Date when actually Salesforce Admin/Developer started working on the change request.</description>
        <inlineHelpText>Start Date when Salesforce Team started working on this Change Request</inlineHelpText>
        <label>Actual Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Admin_Estimated_Hours__c</fullName>
        <description>Please Specify Admin Estimated Hours.</description>
        <inlineHelpText>Please Specify Admin Estimated Hours.</inlineHelpText>
        <label>Admin Estimated Hours</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>SF Administrator or Developer given responsibility for completing this request.</inlineHelpText>
        <label>Assigned To</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>User does not match filter criteria.</errorMessage>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Id</field>
                <operation>equals</operation>
                <value>00e80000000p6lF, 00eC0000001G9g4</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Change_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BA_Estimated_Hours__c</fullName>
        <description>Please specify BA Estimated Hours.</description>
        <inlineHelpText>Please specify BA Estimated Hours.</inlineHelpText>
        <label>BA Estimated Hours</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Change_Summary__c</fullName>
        <inlineHelpText>Please summarize your change request in a brief description.</inlineHelpText>
        <label>Change Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Division__c</fullName>
        <inlineHelpText>Please specify the company division requesting this change.</inlineHelpText>
        <label>Company Division</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Consulting Sales</fullName>
                </value>
                <value>
                    <fullName>Controls</fullName>
                </value>
                <value>
                    <fullName>Direct Sales Office</fullName>
                </value>
                <value>
                    <fullName>Latin America</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>MCP</fullName>
                </value>
                <value>
                    <fullName>National Accounts</fullName>
                </value>
                <value>
                    <fullName>Owner Sales</fullName>
                </value>
                <value>
                    <fullName>TRC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Desired_Completion_Date__c</fullName>
        <inlineHelpText>Please specify the desired date of completion for this change request.</inlineHelpText>
        <label>Desired Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Detailed_Change_Description__c</fullName>
        <description>Description of the requested change.</description>
        <inlineHelpText>Please describe the requested change in detail.</inlineHelpText>
        <label>Detailed Change Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Developer_Estimated_hours__c</fullName>
        <description>Please specify Developer Estimated hours.</description>
        <inlineHelpText>Please specify Developer Estimated hours.</inlineHelpText>
        <label>Developer Estimated hours</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Hours__c</fullName>
        <description>Estimated Number of working Hours to complete the requested new functionality/changes.</description>
        <inlineHelpText>Estimated Number of working Hours to complete the requested new functionality/changes.</inlineHelpText>
        <label>Total Estimated Hours</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Capitalized__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Capitalized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <description>This field captures Product Model number of the newly requested product</description>
        <inlineHelpText>Please enter Product Model number</inlineHelpText>
        <label>Model</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Activities__c</fullName>
        <formula>Number_of_Open_Activities__c  +  Number_of_Closed_Activities__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Activities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Closed_Activities__c</fullName>
        <label>Number of Closed Activities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Open_Activities__c</fullName>
        <label>Number of Open Activities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Priority_Sequence__c</fullName>
        <description>Priority Sequence</description>
        <label>Priority Sequence</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <label>Product Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AAF Filter</fullName>
                </value>
                <value>
                    <fullName>Aftermarket</fullName>
                </value>
                <value>
                    <fullName>Applied</fullName>
                </value>
                <value>
                    <fullName>Applied Non-US</fullName>
                </value>
                <value>
                    <fullName>Daikin</fullName>
                </value>
                <value>
                    <fullName>Parts</fullName>
                </value>
                <value>
                    <fullName>Refrigeration</fullName>
                </value>
                <value>
                    <fullName>Service - Misc.</fullName>
                </value>
                <value>
                    <fullName>Unitary</fullName>
                </value>
                <value>
                    <fullName>VRV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <description>This field captures newly requested product description</description>
        <inlineHelpText>Please enter product description</inlineHelpText>
        <label>Product Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <label>Product Family</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ACCESSORIES</fullName>
                </value>
                <value>
                    <fullName>AHU</fullName>
                </value>
                <value>
                    <fullName>AIR PURIFIER</fullName>
                </value>
                <value>
                    <fullName>Applied Non-US - User Defined</fullName>
                </value>
                <value>
                    <fullName>Applied - User Defined</fullName>
                </value>
                <value>
                    <fullName>C/O CONDENSING UNIT</fullName>
                </value>
                <value>
                    <fullName>CASSETTE CORNER</fullName>
                </value>
                <value>
                    <fullName>CASSETTE DF</fullName>
                </value>
                <value>
                    <fullName>CASSETTE RF</fullName>
                </value>
                <value>
                    <fullName>CEILING MOUNTED</fullName>
                </value>
                <value>
                    <fullName>CEILING SUSPENDED</fullName>
                </value>
                <value>
                    <fullName>CEILING SUSPENDED CASSETTE</fullName>
                </value>
                <value>
                    <fullName>Chilled Water Fan Coil</fullName>
                </value>
                <value>
                    <fullName>Chilled Water Fan Coil Unit</fullName>
                </value>
                <value>
                    <fullName>Chiller AC - Screw</fullName>
                </value>
                <value>
                    <fullName>Chiller AC - Scroll</fullName>
                </value>
                <value>
                    <fullName>Chiller WC - Cent</fullName>
                </value>
                <value>
                    <fullName>Chiller WC - Screw</fullName>
                </value>
                <value>
                    <fullName>Chiller WC - Scroll</fullName>
                </value>
                <value>
                    <fullName>Coating Anti-Corrosive</fullName>
                </value>
                <value>
                    <fullName>Coil</fullName>
                </value>
                <value>
                    <fullName>Condensing Unit</fullName>
                </value>
                <value>
                    <fullName>CONTROLS</fullName>
                </value>
                <value>
                    <fullName>DUCT MOUNTED</fullName>
                </value>
                <value>
                    <fullName>DUCT MOUNTED SLIM</fullName>
                </value>
                <value>
                    <fullName>EVAPORATOR ACCESSORY</fullName>
                </value>
                <value>
                    <fullName>FCU</fullName>
                </value>
                <value>
                    <fullName>FCU DX</fullName>
                </value>
                <value>
                    <fullName>Filter</fullName>
                </value>
                <value>
                    <fullName>Flete / Freight</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <description>Please enter Product Name.(This field is used to capture newly requested product name)</description>
        <inlineHelpText>Please enter Product Name.</inlineHelpText>
        <label>Product Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Sub_Category__c</fullName>
        <label>Product Sub Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Applied non-US</fullName>
                </value>
                <value>
                    <fullName>Room Air</fullName>
                </value>
                <value>
                    <fullName>Light Commercial</fullName>
                </value>
                <value>
                    <fullName>Applied</fullName>
                </value>
                <value>
                    <fullName>Parts</fullName>
                </value>
                <value>
                    <fullName>VRV</fullName>
                </value>
                <value>
                    <fullName>Parts - User Defined</fullName>
                </value>
                <value>
                    <fullName>Flete / Freight</fullName>
                </value>
                <value>
                    <fullName>Service - Misc.</fullName>
                </value>
                <value>
                    <fullName>Coating Anti-Corrosive</fullName>
                </value>
                <value>
                    <fullName>Refrigeration</fullName>
                </value>
                <value>
                    <fullName>AAF Filter</fullName>
                </value>
                <value>
                    <fullName>Aftermarket</fullName>
                </value>
                <value>
                    <fullName>Unitary - User Defined</fullName>
                </value>
                <value>
                    <fullName>Applied Non-US - User Defined</fullName>
                </value>
                <value>
                    <fullName>Applied - User Defined</fullName>
                </value>
                <value>
                    <fullName>VRC</fullName>
                </value>
                <value>
                    <fullName>VFO</fullName>
                </value>
                <value>
                    <fullName>VRA</fullName>
                </value>
                <value>
                    <fullName>VSO</fullName>
                </value>
                <value>
                    <fullName>VTO</fullName>
                </value>
                <value>
                    <fullName>VRI</fullName>
                </value>
                <value>
                    <fullName>GNA</fullName>
                </value>
                <value>
                    <fullName>VWO</fullName>
                </value>
                <value>
                    <fullName>FCU</fullName>
                </value>
                <value>
                    <fullName>MDS</fullName>
                </value>
                <value>
                    <fullName>Mini-Split</fullName>
                </value>
                <value>
                    <fullName>AHU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_Category__c</fullName>
        <inlineHelpText>Please specify the category of this change request.</inlineHelpText>
        <label>Request Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Accounts</fullName>
                </value>
                <value>
                    <fullName>Addresses</fullName>
                </value>
                <value>
                    <fullName>Approvals</fullName>
                </value>
                <value>
                    <fullName>Assets</fullName>
                </value>
                <value>
                    <fullName>Campaigns</fullName>
                </value>
                <value>
                    <fullName>Cases</fullName>
                </value>
                <value>
                    <fullName>Chatter</fullName>
                </value>
                <value>
                    <fullName>Contacts</fullName>
                </value>
                <value>
                    <fullName>CRM</fullName>
                </value>
                <value>
                    <fullName>Dashboards</fullName>
                </value>
                <value>
                    <fullName>Documents</fullName>
                </value>
                <value>
                    <fullName>Integration</fullName>
                </value>
                <value>
                    <fullName>Leads</fullName>
                </value>
                <value>
                    <fullName>Opportunities</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Products</fullName>
                </value>
                <value>
                    <fullName>Quotas</fullName>
                </value>
                <value>
                    <fullName>Quotes</fullName>
                </value>
                <value>
                    <fullName>Reports</fullName>
                </value>
                <value>
                    <fullName>Solutions</fullName>
                </value>
                <value>
                    <fullName>Users</fullName>
                </value>
                <value>
                    <fullName>Web Service</fullName>
                </value>
                <value>
                    <fullName>Workflow</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_Priority_Level__c</fullName>
        <inlineHelpText>Please specify the priority level of this change request.</inlineHelpText>
        <label>Request Priority Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Urgent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_Status__c</fullName>
        <inlineHelpText>The current status of this change request. Available options include:

Requested
Under Review
Approved
Denied
Scheduled For Development
In Development
Completed
Cancelled</inlineHelpText>
        <label>Request Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Requested</fullName>
                    <default>true</default>
                    <label>Requested</label>
                </value>
                <value>
                    <fullName>Under Review</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>Effort Estimation</fullName>
                </value>
                <value>
                    <fullName>Business Prioritization/ Scheduling</fullName>
                </value>
                <value>
                    <fullName>Scheduled For Development</fullName>
                </value>
                <value>
                    <fullName>In Development</fullName>
                </value>
                <value>
                    <fullName>UAT</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <inlineHelpText>Please specify the type of this change request.</inlineHelpText>
        <label>Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Functionality</fullName>
                </value>
                <value>
                    <fullName>Change To Existing Functionality/Behavior</fullName>
                </value>
                <value>
                    <fullName>Business Analysis</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Scheduled_Completion_Date__c</fullName>
        <inlineHelpText>The date this change request is scheduled to be completed.</inlineHelpText>
        <label>Scheduled Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Scheduled_Start_Date__c</fullName>
        <description>Scheduled start date to work on Change Request</description>
        <inlineHelpText>Scheduled start date to work on Change Request</inlineHelpText>
        <label>Scheduled Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_Comments__c</fullName>
        <inlineHelpText>Additional information regarding the current status.</inlineHelpText>
        <label>Status Comments</label>
        <type>TextArea</type>
    </fields>
    <label>Change Request</label>
    <listViews>
        <fullName>AP_Change_Request</fullName>
        <filterScope>Queue</filterScope>
        <label>AP</label>
        <queue>AP</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Change_Requests</fullName>
        <columns>NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>Company_Division__c</columns>
        <columns>Request_Type__c</columns>
        <columns>Request_Category__c</columns>
        <columns>Request_Priority_Level__c</columns>
        <columns>Change_Summary__c</columns>
        <columns>Request_Status__c</columns>
        <columns>Desired_Completion_Date__c</columns>
        <columns>Scheduled_Completion_Date__c</columns>
        <columns>Assigned_To__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Change Requests</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Change_Requests_Completed</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>Company_Division__c</columns>
        <columns>Request_Type__c</columns>
        <columns>Request_Category__c</columns>
        <columns>Request_Priority_Level__c</columns>
        <columns>Change_Summary__c</columns>
        <columns>Desired_Completion_Date__c</columns>
        <columns>Request_Status__c</columns>
        <columns>Scheduled_Completion_Date__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Is_Capitalized__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Request_Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>Company_Division__c</field>
            <operation>notEqual</operation>
            <value>Latin America</value>
        </filters>
        <label>Change Requests - Completed</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Change_Requests_Controls</fullName>
        <columns>NAME</columns>
        <columns>Company_Division__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Request_Status__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Change_Summary__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Company_Division__c</field>
            <operation>equals</operation>
            <value>Controls</value>
        </filters>
        <filters>
            <field>Request_Status__c</field>
            <operation>notEqual</operation>
            <value>Denied,Completed,Cancelled</value>
        </filters>
        <label>Change Requests - Controls</label>
        <language>en_US</language>
        <sharedTo>
            <group>Controls_IE_Management</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Change_Requests_Denied_Cancelled</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>Company_Division__c</columns>
        <columns>Request_Type__c</columns>
        <columns>Request_Category__c</columns>
        <columns>Request_Priority_Level__c</columns>
        <columns>Change_Summary__c</columns>
        <columns>Desired_Completion_Date__c</columns>
        <columns>Request_Status__c</columns>
        <columns>Scheduled_Completion_Date__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Request_Status__c</field>
            <operation>equals</operation>
            <value>Denied,Cancelled</value>
        </filters>
        <label>Change Requests - Denied/Cancelled</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Change_Requests_Open</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>Company_Division__c</columns>
        <columns>Request_Type__c</columns>
        <columns>Request_Category__c</columns>
        <columns>Request_Priority_Level__c</columns>
        <columns>Change_Summary__c</columns>
        <columns>Desired_Completion_Date__c</columns>
        <columns>Request_Status__c</columns>
        <columns>Scheduled_Completion_Date__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Request_Status__c</field>
            <operation>notEqual</operation>
            <value>Denied,Completed,Cancelled</value>
        </filters>
        <label>Change Requests - Open</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Latin_America_Open_CR</fullName>
        <columns>NAME</columns>
        <columns>Request_Priority_Level__c</columns>
        <columns>Priority_Sequence__c</columns>
        <columns>Change_Summary__c</columns>
        <columns>Status_Comments__c</columns>
        <columns>Request_Status__c</columns>
        <columns>Scheduled_Completion_Date__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Change_Request__c.Latin_America</value>
        </filters>
        <filters>
            <field>Request_Status__c</field>
            <operation>notEqual</operation>
            <value>Denied,Completed,Cancelled</value>
        </filters>
        <label>Latin America Open CR</label>
        <language>en_US</language>
        <sharedTo>
            <role>Daikin_Applied</role>
            <role>Latin_America</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>North_America_CRs_Open</fullName>
        <columns>RECORDTYPE</columns>
        <columns>Request_Type__c</columns>
        <columns>NAME</columns>
        <columns>Request_Status__c</columns>
        <columns>Actual_Priority_Level__c</columns>
        <columns>Priority_Sequence__c</columns>
        <columns>Request_Priority_Level__c</columns>
        <columns>Change_Summary__c</columns>
        <columns>Status_Comments__c</columns>
        <columns>Scheduled_Completion_Date__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Company_Division__c</field>
            <operation>notEqual</operation>
            <value>Latin America</value>
        </filters>
        <filters>
            <field>Request_Status__c</field>
            <operation>notEqual</operation>
            <value>Denied,Completed,Cancelled</value>
        </filters>
        <label>North America CRs - Open</label>
        <language>en_US</language>
        <sharedTo>
            <role>Daikin_Applied</role>
            <roleAndSubordinates>North_America</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>North_America_CRs_Open_ALL</fullName>
        <columns>Priority_Sequence__c</columns>
        <columns>Company_Division__c</columns>
        <columns>NAME</columns>
        <columns>Request_Status__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Change_Summary__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Request_Type__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Company_Division__c</field>
            <operation>notEqual</operation>
            <value>Latin America</value>
        </filters>
        <filters>
            <field>Request_Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Denied,Cancelled</value>
        </filters>
        <label>North America CRs - Open (ALL)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>North_America_CRs_Open_IT</fullName>
        <columns>RECORDTYPE</columns>
        <columns>Request_Type__c</columns>
        <columns>NAME</columns>
        <columns>Request_Status__c</columns>
        <columns>Actual_Priority_Level__c</columns>
        <columns>Priority_Sequence__c</columns>
        <columns>Request_Priority_Level__c</columns>
        <columns>Change_Summary__c</columns>
        <columns>Status_Comments__c</columns>
        <columns>Scheduled_Completion_Date__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Company_Division__c</field>
            <operation>notEqual</operation>
            <value>Latin America</value>
        </filters>
        <filters>
            <field>Request_Status__c</field>
            <operation>notEqual</operation>
            <value>Denied,Completed,Cancelled</value>
        </filters>
        <filters>
            <field>Request_Type__c</field>
            <operation>notEqual</operation>
            <value>Business Analysis</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>notEqual</operation>
            <value>Change_Request__c.Business</value>
        </filters>
        <label>North America CRs - Open IT</label>
        <language>en_US</language>
        <sharedTo>
            <role>Daikin_Applied</role>
            <roleAndSubordinates>North_America</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>North_America_CRs_TRC_Open</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>Company_Division__c</columns>
        <columns>Request_Type__c</columns>
        <columns>Request_Category__c</columns>
        <columns>Request_Priority_Level__c</columns>
        <columns>Change_Summary__c</columns>
        <columns>Desired_Completion_Date__c</columns>
        <columns>Request_Status__c</columns>
        <columns>Scheduled_Completion_Date__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Request_Status__c</field>
            <operation>notEqual</operation>
            <value>Denied,Completed,Cancelled</value>
        </filters>
        <filters>
            <field>Company_Division__c</field>
            <operation>equals</operation>
            <value>TRC</value>
        </filters>
        <label>North America CRs - TRC - Open</label>
        <language>en_US</language>
        <sharedTo>
            <role>Daikin_Applied</role>
            <role>North_America</role>
            <roleAndSubordinates>TRC_North_America</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>CR-{00000}</displayFormat>
        <label>Change Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Change Requests</pluralLabel>
    <recordTypes>
        <fullName>Business</fullName>
        <active>true</active>
        <description>Used for the Business Analyst</description>
        <label>Business</label>
    </recordTypes>
    <recordTypes>
        <fullName>Latin_America</fullName>
        <active>false</active>
        <description>Latin America Change Request Record Type</description>
        <label>Latin America</label>
    </recordTypes>
    <recordTypes>
        <fullName>North_America</fullName>
        <active>true</active>
        <description>North America Change Request Record Type</description>
        <label>North America</label>
    </recordTypes>
</CustomObject>